# yeti.sh

./: .gitignore  .pages  404.html  CNAME  README.md  config.toml  index.html  jeeves.py  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  sitemap.xml
.cache/: octadocs.json-ld
.github/workflows/: deploy.yml
annotated/: index.html
armenian/: index.html
articles/: index.html  python-profilers.yaml
articles/annotated/: index.html
articles/bash-basename/: index.html
articles/cs111/: index.html
articles/gh-stack/: index.html
articles/gitmoji/: gitmoji.yaml  index.html
articles/jira-cli/: index.html
articles/material-design-without-npm/: index.html
articles/mkdocs-blog-plugins/: context.yaml  index.html
articles/pydeps/: index.html
articles/pykg/: allegrograph.yaml  fuseki.yaml  index.html  meta.yaml  terminus.yaml  virtuoso.yaml
articles/task-relations/: dependencies.yaml  index.html
articles/terminal-recorder/: index.html
articles/tmux/: index.html
articles/walrus/: index.html
blog/: index.html
blog/annotated/: index.html
blog/bash-basename/: index.html
blog/cs111/: index.html
blog/gh-stack/: index.html
blog/gitmoji/: index.html
blog/mkdocs-blog-plugins/: index.html
blog/notion-adr-template/: index.html
cv/: index.html
docs/: .pages  CNAME  annotated.md  context.json  index.md  material-design-without-npm.md
ideas/: index.html  yaml-to-slides.yaml
posts/: avoid-peewee-floatfield.md  confluence-cli.md  deadletter-to-sentry.md  lambda-dist-info.md  precious-serverlessness.md  redshift-drop-multiple-tables.md  stop-all-executions.md
projects/: index.html
search/: search_index.json
(+229 files in other folders)
