[tool.poetry]
name = "yetish"
version = "0.1.1"
description = "https://yeti.sh website"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mkdocs-material = "^8.1.3"
mkdocs-blogging-plugin = "^1.4.0"
mkdocs-iolanta-tables = "^1.1.7"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
