[tool.poetry]
name = "yetish"
version = "0.1.1"
description = "https://yeti.sh website"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mkdocs-blogging-plugin = "^1.4.0"
iolanta-roadmap = "^0.1.0"
iolanta-tables = "^0.1.7"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
